gitignore and non functional requirements first draft

--- a/Deliverable 1/SRS.tex
+++ b/Deliverable 1/SRS.tex
@@ -250,6 +250,12 @@ For example, if you wish to organization by business events:
 \section{Non-Functional Requirements}
 \label{sec:non-functional_requirements}
 % Begin Section
+
+% manually managed enumi variable to preserve enumerations across sections
+\newcounter{_enumi}
+\newcommand{\holdEnum}{\setcounter{_enumi}{\value{enumi}}}
+\newcommand{\resumeEnum}{\setcounter{enumi}{\value{_enumi}}}
+
 \subsection{Look and Feel Requirements}
 \label{sub:look_and_feel_requirements}
 % Begin SubSection
@@ -258,15 +264,25 @@ For example, if you wish to organization by business events:
 \label{ssub:appearance_requirements}
 % Begin SubSubSection
 \begin{enumerate}[{LF}1. ]
-	\item 
+	\item The product's interface shall be designed in a way such that it can be easily adapted to different screen sizes.
+	\item The product shall minimize the use of visual adornments that would otherwise clutter the interface.
+	\item The product shall use common navigational elements (ie. status bar, tab bar, hamburger menu) to help usability amongst new users.
+	\item The product shall use common iconography to help usability amongst new users. 
+	\item The product shall make heavy use of contrast to help it's usability amongst colour blind users.
+	\item The product shall predominantly use a single colour to help develop and maintain it's brand identity.
+	\holdEnum
 \end{enumerate}
 % End SubSubSection
 
 \subsubsection{Style Requirements}
 \label{ssub:style_requirements}
 % Begin SubSubSection
-\begin{enumerate}[{LF}1. ]
-	\item 
+\begin{enumerate}[{LF}1.]
+	\resumeEnum
+	%TODO: Reference the google material design guidelines in section 1.4
+	\item Where it can, the product shall conform to Google's material design guidelines.
+	\item The product shall use primarily sans-serif fonts.
+	\item The product's app icon shall be designed in the common negative-space style to help it sit better amongst other popular app icons.  
 \end{enumerate}
 % End SubSubSection
 
@@ -280,7 +296,12 @@ For example, if you wish to organization by business events:
 \label{ssub:ease_of_use_requirements}
 % Begin SubSubSection
 \begin{enumerate}[{UH}1. ]
-	\item 
+	\item The product shall be usable by anyone fluent in the English language.
+	\item The product's navigational elements should be found in under 2 seconds by new users.
+	\item The product's navigational elements shall behave in the ways standard to the Android operating system. This should make the app more intuitive to use for new users. 
+	\item The product's functions shall be designed a way such that they require a minimum number of gestures from the user.
+	\item Where it makes sense, the product shall favour input elements such as sliders over raw text input.
+	\holdEnum
 \end{enumerate}
 % End SubSubSection
 
@@ -288,7 +309,10 @@ For example, if you wish to organization by business events:
 \label{ssub:personalization_and_internationalization_requirements}
 % Begin SubSubSection
 \begin{enumerate}[{UH}1. ]
-	\item 
+	\resumeEnum
+	\item The product shall favour the use of icons such that, when needed, it can be more easily adapted to different languages and cultures.
+	\item The product shall use Android SDK best practices so that the user's global accessibility settings (text size, text-to-speech etc...) will take effect in the app. 
+	\holdEnum
 \end{enumerate}
 % End SubSubSection
 
@@ -296,23 +320,32 @@ For example, if you wish to organization by business events:
 \label{ssub:learning_requirements}
 % Begin SubSubSection
 \begin{enumerate}[{UH}1. ]
-	\item 
+	\resumeEnum
+	\item By using standard Android navigational elements, the product should not take more than 10 minutes for a new user to become adept with it.
+	\item For any non-traditional feature, the product shall use short tutorial text to educate the user about it's functionality.
+	\holdEnum
 \end{enumerate}
 % End SubSubSection
 
 \subsubsection{Understandability and Politeness Requirements}
 \label{ssub:understandability_and_politeness_requirements}
+
 % Begin SubSubSection
 \begin{enumerate}[{UH}1. ]
-	\item 
+ 	\resumeEnum
+	\item The product shall contain no language or ideas inappropriate for an elementary school level user.
+	\holdEnum
 \end{enumerate}
 % End SubSubSection
 
 \subsubsection{Accessibility Requirements}
 \label{ssub:accessibility_requirements}
-% Begin SubSubSection
+% Begin SubSubSe ction
 \begin{enumerate}[{UH}1. ]
-	\item 
+	\resumeEnum
+	\item The product's interface shall use intractable elements at a minimum of 60x60points in size to help users with reduced motor skills.
+	\item By employing standard Android SDK best practices as mentioned in LF7, the product shall adapt the user's global accessibility settings such as TTS (text to speech) and increased/decreased font sizes. 
+	\item The product shall make heavy use of contrast and minimize the use of multiple colours to help colour blind users (This is also mentioned in LF5).
 \end{enumerate}
 % End SubSubSection
 
@@ -326,23 +359,33 @@ For example, if you wish to organization by business events:
 \label{ssub:speed_and_latency_requirements}
 % Begin SubSubSection
 \begin{enumerate}[{PR}1. ]
-	\item 
+	\item Any network requests made by the product will be dispatched and listened to on a background thread so that the user interface (driven by the main thread) does not stall.
+	\item Each user interaction shall be followed up by a visual change on screen. The time between these two events should never exceed half a second.
+	\item Procedural world generation for a new game should take no longer than 2 seconds.
+	\item Loading an in-progress game should take no longer than 1 second.
+	\item The app should launch in no longer than 2 seconds.
+	\item The app should resume from background in no longer than 1 second.
+	\holdEnum
 \end{enumerate}
 % End SubSubSection
 
 \subsubsection{Safety-Critical Requirements}
 \label{ssub:safety_critical_requirements}
+% pretty sure this is n.a - James
+n.a
 % Begin SubSubSection
-\begin{enumerate}[{PR}1. ]
-	\item 
-\end{enumerate}
+%\begin{enumerate}[{PR}1. ]
+%	\item 
+%\end{enumerate}
 % End SubSubSection
 
 \subsubsection{Precision or Accuracy Requirements}
 \label{ssub:precision_or_accuracy_requirements}
 % Begin SubSubSection
 \begin{enumerate}[{PR}1. ]
-	\item 
+	\resumeEnum
+	\item When performing floating-point arithmetic, the app shall favour the use double precision to minimize rounding error.
+	\holdEnum
 \end{enumerate}
 % End SubSubSection
 
@@ -350,7 +393,11 @@ For example, if you wish to organization by business events:
 \label{ssub:reliability_and_availability_requirements}
 % Begin SubSubSection
 \begin{enumerate}[{PR}1. ]
-	\item 
+	\resumeEnum
+	\item The product shall not require an active internet connection (ie. it will be available offline).
+	\item In any case that the device is running under normal circumstances, the app shall be available.
+	\item Under any normal use case, the app should not crash.
+	\holdEnum
 \end{enumerate}
 % End SubSubSection
 
@@ -358,7 +405,10 @@ For example, if you wish to organization by business events:
 \label{ssub:robustness_or_fault_tolerance_requirements}
 % Begin SubSubSection
 \begin{enumerate}[{PR}1. ]
-	\item 
+	\resumeEnum
+	\item The app shall temporarily save an ongoing game in the event that it is terminated unexpectedly by the user or by the operating system in the event that memory needs to be freed. 
+	\item The app shall reopen the saved game from PR11 in the event that it is launched following an unexpected termination.
+	\holdEnum
 \end{enumerate}
 % End SubSubSection
 
@@ -366,7 +416,9 @@ For example, if you wish to organization by business events:
 \label{ssub:capacity_requirements}
 % Begin SubSubSection
 \begin{enumerate}[{PR}1. ]
-	\item 
+	\resumeEnum
+	\item The product shall allow the user to save up to 10 in-progress games. This does not include the game temporarily saved in the event that the app terminates unexpectedly (PR11).
+	\holdEnum
 \end{enumerate}
 % End SubSubSection
 
@@ -374,7 +426,9 @@ For example, if you wish to organization by business events:
 \label{ssub:scalability_or_extensibility_requirements}
 % Begin SubSubSection
 \begin{enumerate}[{PR}1. ]
-	\item 
+	\resumeEnum
+	\item The product is planned to feature an online versus mode in the future in which it will allow for up to 4 concurrent players per session. 
+	\holdEnum
 \end{enumerate}
 % End SubSubSection
 
@@ -382,7 +436,8 @@ For example, if you wish to organization by business events:
 \label{ssub:longevity_requirements}
 % Begin SubSubSection
 \begin{enumerate}[{PR}1. ]
-	\item 
+	\resumeEnum
+	\item The product should be maintainable and extensible within it's planned maintenance budget for 5 years post launch.
 \end{enumerate}
 % End SubSubSection
 
@@ -396,7 +451,8 @@ For example, if you wish to organization by business events:
 \label{ssub:expected_physical_environment}
 % Begin SubSubSection
 \begin{enumerate}[{OE}1. ]
-	\item 
+	\item As the app operates within the Android environment and introduces no restriction under which it operates within that environment, the product shall be usable under circumstances where the Android operating system allows it.
+	\holdEnum
 \end{enumerate}
 % End SubSubSection
 
@@ -404,7 +460,11 @@ For example, if you wish to organization by business events:
 \label{ssub:requirements_for_interfacing_with_adjacent_systems}
 % Begin SubSubSection
 \begin{enumerate}[{OE}1. ]
-	\item 
+	\resumeEnum
+	\item The product shall work on any smartphone running Android 4.4 (KitKat) and later.
+	\item As an online feature is planned for sometime in the future, the app shall take into consideration architectures for interfacing with a socket based web server.
+	\item Future updates to the app shall not invalidate game saves made on previous versions.
+	\holdEnum
 \end{enumerate}
 % End SubSubSection
 
@@ -412,7 +472,12 @@ For example, if you wish to organization by business events:
 \label{ssub:productization_requirements}
 % Begin SubSubSection
 \begin{enumerate}[{OE}1. ]
-	\item 
+	\resumeEnum
+	% TODO: Link to the google play store in section 1.4.
+	\item The product shall be installable directly from the Google Play Store.
+	\item The product shall have 5 screenshots and a short text description to advertise it on the Google Play Store.
+	\item The product shall be no bigger than 15MB. 
+	\holdEnum
 \end{enumerate}
 % End SubSubSection
 
@@ -420,7 +485,9 @@ For example, if you wish to organization by business events:
 \label{ssub:release_requirements}
 % Begin SubSubSection
 \begin{enumerate}[{OE}1. ]
-	\item 
+	\resumeEnum
+	\item Maintenance and new content updates will be published at the end of each month.
+	\holdEnum
 \end{enumerate}
 % End SubSubSection
 
@@ -434,7 +501,8 @@ For example, if you wish to organization by business events:
 \label{ssub:maintenance_requirements}
 % Begin SubSubSection
 \begin{enumerate}[{MS}1. ]
-	\item 
+	\item Hotfixes must available to publish within a day of them being made.
+	\holdEnum
 \end{enumerate}
 % End SubSubSection
 
@@ -442,7 +510,10 @@ For example, if you wish to organization by business events:
 \label{ssub:supportability_requirements}
 % Begin SubSubSection
 \begin{enumerate}[{MS}1. ]
-	\item 
+	\resumeEnum
+	% TODO: Link to the google play store in 1.4.
+	\item A link to the company's support url will be provided in the description on the Google Play Store for feature requests and bug reports.
+	\holdEnum
 \end{enumerate}
 % End SubSubSection
 
@@ -450,7 +521,10 @@ For example, if you wish to organization by business events:
 \label{ssub:adaptability_requirements}
 % Begin SubSubSection
 \begin{enumerate}[{MS}1. ]
-	\item 
+	\resumeEnum
+	\item The product is expected to run on version of Android 4.4 (KitKat) and later.
+	\item The product may be ported to iOS and Windows Phone in the future.
+	\item The product may be adapted to accommodate different screen sizes and aspect ratios in the future.
 \end{enumerate}
 % End SubSubSection
 
@@ -464,7 +538,8 @@ For example, if you wish to organization by business events:
 \label{ssub:access_requirements}
 % Begin SubSubSection
 \begin{enumerate}[{SR}1. ]
-	\item 
+	\item When online features are introduced in the future, only a user logged into an account may play under that account's identity.
+	\holdEnum
 \end{enumerate}
 % End SubSubSection
 
@@ -472,7 +547,10 @@ For example, if you wish to organization by business events:
 \label{ssub:integrity_requirements}
 % Begin SubSubSection
 \begin{enumerate}[{SR}1. ]
-	\item 
+	\resumeEnum
+	\item The product shall guard against the introduction of incorrect data to, for example, guard against an attacker spoofing high scores numbers.
+	\item When online features are introduced in the future, the product shall guard against the automated generation of user accounts. 
+	\holdEnum
 \end{enumerate}
 % End SubSubSection
 
@@ -480,23 +558,32 @@ For example, if you wish to organization by business events:
 \label{ssub:privacy_requirements}
 % Begin SubSubSection
 \begin{enumerate}[{SR}1. ]
-	\item 
+	\resumeEnum
+	\item The product shall inform users of its information policy before collecting data on them.
+	\item The product shall inform the users of changes to its information policy.
+	\item The product shall adhere to it's information policy if revealing private user information.
+	\holdEnum
 \end{enumerate}
 % End SubSubSection
 
 \subsubsection{Audit Requirements}
 \label{ssub:audit_requirements}
+n.a
 % Begin SubSubSection
-\begin{enumerate}[{SR}1. ]
-	\item 
-\end{enumerate}
+%\begin{enumerate}[{SR}1. ]
+%	\resumeEnum
+%	\item 
+%	\holdEnum
+%\end{enumerate}
 % End SubSubSection
 
 \subsubsection{Immunity Requirements}
 \label{ssub:immunity_requirements}
+
 % Begin SubSubSection
 \begin{enumerate}[{SR}1. ]
-	\item 
+	\resumeEnum
+	\item As the product runs under management of the Android operating system, the immunity of the product relies on the guards put in place by Android.
 \end{enumerate}
 % End SubSubSection
 
@@ -510,16 +597,19 @@ For example, if you wish to organization by business events:
 \label{ssub:cultural_requirements}
 % Begin SubSubSection
 \begin{enumerate}[{CP}1. ]
-	\item 
+	\item The product shall aim to not offend any ethnic or religious groups.
+	\item The product shall hold seasonal events celebrating holidays from a variety of ethnic and religious backgrounds.
+	\holdEnum
 \end{enumerate}
 % End SubSubSection
 
 \subsubsection{Political Requirements}
 \label{ssub:political_requirements}
+n.a
 % Begin SubSubSection
-\begin{enumerate}[{CP}1. ]
-	\item 
-\end{enumerate}
+%\begin{enumerate}[{CP}1. ]
+%	\item 
+%\end{enumerate}
 % End SubSubSection
 
 % End SubSection
@@ -532,7 +622,8 @@ For example, if you wish to organization by business events:
 \label{ssub:compliance_requirements}
 % Begin SubSubSection
 \begin{enumerate}[{LR}1. ]
-	\item 
+	\item Personal information shall be implemented in compliance with the data protection act.
+	\holdEnum
 \end{enumerate}
 % End SubSubSection
 
@@ -540,7 +631,9 @@ For example, if you wish to organization by business events:
 \label{ssub:standards_requirements}
 % Begin SubSubSection
 \begin{enumerate}[{LR}1. ]
-	\item 
+	\resumeEnum
+	\item The app will conform with acceptable performance standards for games and simulations.
+	\item The app will conform to the Android Core App Quality standards to minimize turnover approval time and to increase the chances of being featured in the Google Play Store.
 \end{enumerate}
 % End SubSubSection
 
