--- a/Deliverable 1/SRS.tex
+++ b/Deliverable 1/SRS.tex
@@ -37,27 +37,16 @@
 \section{Introduction}
 \label{sec:introduction}
 % Begin Section
-
-This section of the SRS should provide an overview of the entire SRS.
-
 \subsection{Purpose}
 \label{sub:purpose}
 % Begin SubSection
-\begin{enumerate}[a)]
-	\item Delineate the purpose of the SRS
-	\item Specify the intended audience for the SRS
-\end{enumerate}
+The purpose of the document is to provide a detailed description of the requirements of the application "Climatar". It serves to highlight objectives and key features, the application is perceived to embody, while also describing the scope, constraints and interface of the applicarion. This document is intended for the members of the development team (ie. authors of the document) as reference throughout the various stages of the SDLC.
 % End SubSection
 
 \subsection{Scope}
 \label{sub:scope}
 % Begin SubSection
-\begin{enumerate}[a)]
-	\item Identify the software product(s) to be produced by name (e.g., Host DBMS, Report Generator, etc.)
-	\item Explain what the software product(s) will, and, if necessary, will not do
-	\item Describe the application of the software being specified, including relevant benefits, objectives, and goals
-	\item Be consistent with similar statements in higher-level specifications (e.g., the system requirements specification), if they exist
-\end{enumerate}
+	
 % End SubSection
 
 \subsection{Definitions, Acronyms, and Abbreviations}
